@@ -10,6 +10,7 @@
 * iATS: Add scrubbing support to iATS [bruno] #2228
 * Stripe: Ensure ECI values for tokenized cards are padded [jasonwebster] #2250
 * Forte: Fix incorrect authorization_code response mapping [davidsantoso]
+* maxiPago: Send currency with request [curiousepic]
 
 == Version 1.61.0 (November 7, 2016)
 * Add codes AQ, BQ, SX, and SS to list of countries and update SD numeric code [zxlin]
